# pyfesom2

./: .gitignore  .travis.yml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README.rst  ascii_to_netcdf_optimized.py  benchmark_ascii_to_mesh.py  benchmark_optimized.py  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  validate_optimizations.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pf2_basic.yml  push_containers.yml  pyfesom2-publish.yml  pyfesom2.yml  pyfesom2_onPR.yml  pyfesom2_onollie.yml
ci/: reqirements_doc.yml  requirements-py36.yml  requirements-py37.yml  requirements.yml  requirements_doc.txt  requirements_doc.yml
conda/: conda_build_config.yaml  meta.yaml
docs/: Makefile  conf.py  examples.rst  index.rst  installation.rst  make.bat  pfinterp.rst  pfplot.rst  publishing_to_sw_forges.rst  requirements.txt  tools.rst  usage.rst
docs/_static/: theme_override.css
docs/_templates/: layout.html
notebooks/: Fesom2GeoFormat.ipynb  accessor_basic_plotting.ipynb  accessor_selections.ipynb  compute_MOC.ipynb  create_netcdf_mesh_description_file.ipynb  plot_main.ipynb  pyfesom2_overview.ipynb  remote_datasets.ipynb  tplot_plotting_on_original_mesh.ipynb  transports.ipynb  volume_heat_transport_section.ipynb  xarray_interface.ipynb
notebooks/extra_notebooks/: compute_streamfunctions.ipynb  initial_conditions_TS_interpolation.ipynb  initial_conditions_sea_ice_interpolation.ipynb
pyfesom2/: __init__.py  accessor.py  ascii_to_netcdf.py  climatology.py  config.py  datasets.py  diagnostics.py  fesom2GeoFormat.py  fesom_plot_tools.py  load_mesh_data.py  load_mesh_data_c.py  mesh_to_zenodo.py  oasis_export.py  pfinterp.py  pfplot.py  plotting.py  regridding.py  regriding.py  transect.py  transport.py  ut.py
pyfesom2/geojson/: MZeising_ArcticSeas.geojson  NinoRegions.geojson  Reccap_Arctic.geojson  Reccap_Atlantic.geojson  Reccap_Coast.geojson  Reccap_Indian.geojson  Reccap_Open.geojson  Reccap_Pacific.geojson  Reccap_Southern.geojson
tests/: conftest.py  test_accessor.py  test_datasets.py  test_diagnostics.py  test_load_mesh.py  test_load_mesh_data.py  test_plotting.py  test_plotting2.py  test_plotting_transect.py  test_pyfesom2.py  test_regridding.py  test_transect.py  test_ut.py
tests/data/pi-grid/: aux3d.out  fesom.mesh.diag.nc  nod2d.out  pickle_mesh_py3_fesom2
tests/data/pi-results/: a_ice.fesom.1948.nc  a_ice.fesom.1949.nc  m_ice.fesom.1948.nc  temp.fesom.1948.nc  temp.fesom.1949.nc  u.fesom.1948.nc  u.fesom.1949.nc  v.fesom.1948.nc  v.fesom.1949.nc  w.fesom.1948.nc  w.fesom.1949.nc
